--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p align="center"> <img src="https://komarev.com/ghpvc/?username=ZhengxinZh&label=Profile%20views&color=ce9927&style=flat" alt="ZhengxinZh" /> </p>
 </body>
 </html>
